@@ -4,6 +4,7 @@
 	Fix error message. "The context is either Document nor Element."
 	-> "The context is neither Document nor Element."
 	Define getOwnerDocument function.
+	Modify execExpr function to receive opts.document argument.
 
 	* tryXpath/background/try_xpath_background.js:
 	Define genericListener.listeners.focusItemInTab function.
